Refactor: Update build configurations, dependencies, and project structure
- Updates the Android Gradle Plugin to version 8.9.1.
- Updates Kotlin to version 2.1.10.
- Updates KSP to version 2.1.10-1.0.31.
- Updates various library versions including `appcompat`, `bcpkix-jdk18on`, `blurview`, `circleindicator`, `collapsingtoolbarlayout-subtitle`, `colorpickerVersion`, `commonsText`, `concurrentFutures`, `constraintlayout`, `coreKtx`, `coreSplashscreen`, `dotsindicator`, `eventbus`, `fadingedgelayout`, `flexbox`, `glide`, `guava`, `jsoup`, `kotlinxCoroutinesAndroid`, `library`, `lottie`, `material`, `navigationUiKtx`, `navigationFragmentKtx`, `parcelize`, `paletteKtx`, `playServicesBase`, `preferenceKtx`, `recyclerviewSelection`, `recyclerview`, `remotepreferences`, `roomVersion`, `slf4jApi`, `viewpager2`, `workRuntime`, `zip4j`.
- Adds support for two product flavors: "standard" and "foss".
- Sets `minSdk` to 31 and `targetSdk` to 35 in `app/build.gradle.kts`.
- Sets the `jvmTarget` to 17.
- Adds a `keystore.properties` file for release signing.
- Configures release and debug build types with specific settings.
- Adds `cmake` external native build configuration.
- Adds `ndkVersion` to 25.2.9519653.
- Adds split apks capability
- Adds many dependencies like: `bcpkix-jdk18on`, `blurview`, `circleindicator`, `collapsingtoolbarlayout-subtitle`, `colorpicker`, `commons-text`, `dotsindicator`, `fadingedgelayout`, `flexbox`, `glide`, `guava`, `jsoup`, `lottie`, `remotepreferences`, `zip4j`, `su-core`, `su-nio`, `su-service`, etc.
- Adds configuration for Room database and Glide image loader.
- Adds support for the Xposed framework.
- Adds a `proguard-rules.pro` file with new rules for code obfuscation and optimization.
- Removes core library desugaring.
- Removes `compose` related dependencies.
- Removes `hilt` related dependencies.
- Updates the project to use `libs.versions.toml` for dependency management.
- Adds multiple permissions to `AndroidManifest.xml`.
- Adds multi